other-mpol/resolve-image-to-digest/.chainsaw-test/partial-exception-pod-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: partial-exception
  namespace: default
spec:
  containers:
  - name: first
    image: registry.invalid/exempt:1
  - name: middle
    image: ghcr.io/kyverno/test-busybox:latest@sha256:c81e98c8ff8ebe2ef81b784e9fcab9d1013d75064d00d0be4941ffb6973c948d
  - name: last
    image: ghcr.io/kyverno/test-busybox:latest@sha256:c81e98c8ff8ebe2ef81b784e9fcab9d1013d75064d00d0be4941ffb6973c948d
