other-mpol/resolve-image-to-digest/.chainsaw-test/partial-exception-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: partial-exception
  namespace: default
spec:
  containers:
  - name: first
    image: registry.invalid/exempt:1
  - name: middle
    image: ghcr.io/kyverno/test-busybox:latest
  - name: last
    image: ghcr.io/kyverno/test-busybox:latest
