other-mpol/resolve-image-to-digest/.chainsaw-test/podcontroller-patched.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.28@sha256:859d41e4316c182cb559f9ae3c5ffcac8602ee1179794a1707c06cd092a008d3
      - name: busybox02
        image: ghcr.io/kyverno/test-busybox:1.28@sha256:859d41e4316c182cb559f9ae3c5ffcac8602ee1179794a1707c06cd092a008d3
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: busybox
            image: ghcr.io/kyverno/test-busybox:1.28@sha256:859d41e4316c182cb559f9ae3c5ffcac8602ee1179794a1707c06cd092a008d3
          - name: busybox02
            image: ghcr.io/kyverno/test-busybox:1.28@sha256:859d41e4316c182cb559f9ae3c5ffcac8602ee1179794a1707c06cd092a008d3
          restartPolicy: OnFailure
