other-mpol/resolve-image-to-digest/.chainsaw-test/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.28
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.28
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.28
