other-mpol/resolve-image-to-digest/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: resolve-image-to-digest
spec:
  steps:
  - name: policy-exceptions-namespace
    skipDelete: true
    try:
    - apply:
        resource: {apiVersion: v1, kind: Namespace, metadata: {name: policy-exceptions}}
  - name: step-01
    try:
    - apply:
        file: ../resolve-image-to-digest.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pods.yaml
    - assert:
        file: pods-patched.yaml
    - apply:
        file: podcontroller.yaml
    - assert:
        file: podcontroller-patched.yaml
  - name: step-03-partial-exception
    try:
    - apply:
        file: partial-exception.yaml
    - apply:
        file: partial-exception-pod.yaml
    - assert:
        file: partial-exception-pod-patched.yaml
